# ExampleTemplateService

./: .gitignore  LICENSE.txt  README.md
example-service-template-core/: pyproject.toml
example-service-template-core/src/example_service_template_core/: utils.py
example-service-template-core/tests/example_service_template_core/: test_version.py
example-service-template-foundation/: pyproject.toml
example-service-template-foundation/src/example_service_template_foundation/: configuration_manager.py  utils.py
example-service-template-foundation/tests/example_service_template_foundation/: test_version.py
example-service-template-service/: README.md  default_config.yml  pyproject.toml  requirements.txt
example-service-template-service/docker/: Dockerfile
example-service-template-service/script/: request.py
example-service-template-service/src/example_service_template_service/: app.py  constants.py  run.py  service.py  utils.py
example-service-template-service/src/example_service_template_service/api_v1/: example_service.py
example-service-template-service/tests/example_service_template_service/: test_version.py
example-service-templete-core/: README.md  pyproject.toml
example-service-templete-core/src/example_service_templete_core/: utils.py
example-service-templete-foundation/: pyproject.toml
example-service-templete-foundation/src/example_service_templete_foundation/: configuration_manager.py
example-service-templete-service/: pyproject.toml
example-service-templete-service/docker/: Dockerfile  local.dockerfile
example-service-templete-service/src/example_service_templete_service/: __init__.py  app.py  constants.py  metrics.py  run.py  service.py  utils.py
example-service-templete-service/src/example_service_templete_service/api_v1/: example_service.py
example-template-core/: README.md  pyproject.toml
example-template-core/src/example_template_core/: save_model.py
example-template-core/src/example_template_core/service/: object_detection_service.py
example-template-core/src/example_template_core/yolo/: backbone.py  config.py  functions.py  utils.py  yolov4.py
example-template-core/tests/example_service_template_core/: test_version.py
example-template-foundation/: README.md  pyproject.toml
example-template-foundation/src/example_template_foundation/: configuration_manager.py
example-template-foundation/src/example_template_foundation/config/: configuration_manager.py
example-template-foundation/src/example_template_foundation/storage/: google_cloud.py  models_provider.py  mydrive
example-template-foundation/tests/example_service_template_foundation/: test_version.py
example-template-service/: README.md  default_config.yml  pyproject.toml  requirements.txt
example-template-service/docker/: Dockerfile
example-template-service/script/: request_image_detection.py
example-template-service/src/example_template_service/: __init__.py  app.py  constants.py  metrics.py  run.py  service.py  utils.py
example-template-service/src/example_template_service/api_v1/: example_service.py
example-template-service/tests/example_service_template_service/: test_version.py
md-example-service-template-foundation/: README.md  pyproject.toml
md-example-service-template-foundation/src/md_example_service_template_foundation/: configuration_manager.py  logger.py
md-example-service-template-foundation/tests/example_service_template_foundation/: test_version.py
