[tool.poetry]
name = "example-service-template-core"
version = "0.1.0"
description = ""
authors = ["Anustup Das <anustup@mediadistillery.com>", "Ryan Amirkhan <ryan@mediadistillery.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
example-service-template-foundation = { path = "../example-service-template-foundation", develop = true }

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
