[tool.poetry]
name = "example-service-templete-foundation"
version = "0.1.0"
description = ""
authors = ["Anustup <anustup@mediadistillery.com>"]
license = "MediaDistillery"


[tool.poetry.dependencies]
python="^3.6"
klein="^17.10"
msgpack="^0.6.0"
nose="^1.3.7"
numpy="^1.15"
pika="^0.12"
prometheus-client=">=0.5"
psutil="^5.4"
PyYAML=">=5.1b3"
requests="^2.21"
pillow="*"
marshmallow="<3"
google-cloud-storage=">=1.35,<2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
pytest-mock = "*"

