[tool.poetry]
name = "example-service-templete-service"
version = "0.1.0"
description = ""
authors = ["Anustup <anustup@mediadistillery.com>"]
license = "MediaDistillery"

[tool.poetry.dependencies]
python = "^3.8"
fastapi="~0.63.0"
pydantic="~1.7.3"
uvicorn="~0.13.3"
prometheus-client = ">=0.6.0"
example-service-templete-foundation = { path = "../example-service-templete-foundation", develop = true }
python-multipart = "^0.0.5"
h5py = "<3"
py3nvml = ">=0.2.6"
example-service-templete-core = { path = "../example-service-templete-core", develop = true }

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1"

[tool.poetry.scripts]
example_service_templete_web_start = 'example_service_templete_service.run:run_cli'
run-cli = "example_service_templete_service.run:run_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
